--- a/css/info.css
+++ b/css/info.css
@@ -43,6 +43,13 @@ p {
     color: black;
 }
 
+.info_card>
+p {
+    color: black;
+    line-height: 1.5rem;
+    font-weight: bold;
+}
+
 .info_card>h2 {
     text-transform: uppercase;
     margin-bottom: 1rem;
