--- a/css/info.css
+++ b/css/info.css
@@ -20,7 +20,7 @@
 
 .info_card {
     width: 100%;
-    height: 300px;
+    height: auto;
     padding: 16px;
     /* border: 2px solid black; */
     border-radius: 8px;
@@ -45,6 +45,7 @@ p {
 
 .info_card>
 p {
+    font-size: 18px,
     color: black;
     line-height: 1.5rem;
     font-weight: bold;
