--- a/css/info.css
+++ b/css/info.css
@@ -45,7 +45,7 @@ p {
 
 .info_card>
 p {
-    font-size: 18px,
+    font-size: 18px;
     color: black;
     line-height: 1.5rem;
     font-weight: bold;
